<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.reserver.ReserverActivity">

    <TextView
        android:id="@+id/label_guest_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_guest_phone_number"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_guest_phone_number"
        android:layout_toRightOf="@+id/label_guest_phone_number"
        android:background="@drawable/red_phone_box"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/label_guest_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_guest_phone_number"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/label_guest_email"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_guest_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_guest_email"
        android:layout_toRightOf="@+id/label_guest_email"
        android:maxLines="1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/label_guests_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_guest_email"
        android:layout_marginTop="64dp"
        android:text="@string/label_guests_count"
        android:textSize="15sp"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/picker_guests_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edittext_guest_email"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picker_guests_count"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorGrey"
        android:text="@string/button_date"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_date"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:background="@color/colorGrey"
        android:text="@string/button_time"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/label_admin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_date"
        android:layout_marginRight="16dp"
        android:text="@string/label_admin_email"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_admin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_admin_email"
        android:layout_toRightOf="@+id/label_admin_email"
        android:maxLines="1"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"
        android:text="@string/button_submit"
        android:textColor="@color/colorGreen"
        android:textSize="15sp" />

</RelativeLayout>